# x-shield

./: .env.example  .gitignore  CLAUDE.md  README.md  com.aliir74.x-shield.plist  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
scripts/: run.sh
src/: __main__.py  shield.py
tests/: conftest.py  test_shield.py
