[project]
name = "x-shield"
version = "0.1.0"
description = "Auto-private Twitter/X account on viral detection"
requires-python = ">=3.11"
dependencies = [
    "twikit>=2.3.3",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "pyright>=1.1.408",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["tests", ".venv"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "PLC0415"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
